--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
                 <input type="submit" value="Login" onclick="validar()" id="btn-enviar" class="button">
 
-                <input type="button" value="Esqueci a Senha" class="button">
+                <a href="esqueci_a_senha.html" target="_blank"><input type="button" value="Esqueci a Senha" class="button"></a>
 
 
 
